--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -475,7 +475,7 @@ input[type=number] {
 
 .was-validated .sampleRow .selectize-input[data-custom-valid=true],
 .was-validated .sampleRow .validation-color .full:not(.disabled),
-.was-validated .sampleRow .validation-color-not-required .selectize-input {
+.was-validated .sampleRow .validation-color-not-required .selectize-input:not(.disabled) {
     border-color: var(--green);
 }
 
