--- a/src/main/resources/templates/admin/requested-values.html
+++ b/src/main/resources/templates/admin/requested-values.html
@@ -3,7 +3,7 @@
     <title id="pageTitle">Requested Values Overview</title>
 </head>
 <head>
-    <script src="/js/requestedValues.js"></script>
+    <script src="/js/dataTables/requestedValues.js"></script>
     <script src="/external/datatables/buttons-1.6.2/dataTables.buttons.min.js"></script>
     <script src="/external/datatables/buttons-1.6.2/buttons.bootstrap4.min.js"></script>
     <script src="/external/datatables/buttons-1.6.2/buttons.html5.min.js"></script>
