--- a/src/main/resources/templates/metadataValidator/simple/read-only.html
+++ b/src/main/resources/templates/metadataValidator/simple/read-only.html
@@ -23,7 +23,7 @@
     <h2 th:inline="text">[[${header}]] Submission [[${identifier}]]</h2>
     <span id="identifier" th:text="${submission.identifier}" hidden></span>
 
-    <div th:if="${!submission.finished && !submission.onHold}"
+    <div th:if="${!submission.finished && !submission.isPaused}"
          class="alert alert-dismissible fade show"
          th:classappend="${merging} ? 'alert-warning' : 'alert-success'">
         <h4 class="alert-heading">Thank you!</h4>
@@ -222,6 +222,9 @@
                     </td>
                     <td th:hidden="${hasSubmissionTypeSamples}">
                         <span th:text="${sample.libraryPreparationKit}"></span>
+                        <small class="text-muted align-text-top"
+                               th:with="adapterSequence=${libPrepKitAdapterSequence.get(sample.libraryPreparationKit)}"
+                               th:text="${adapterSequence.second}" th:title="${adapterSequence.first}"></small>
                     </td>
                     <td th:hidden="${hasSubmissionTypeSamples}">
                         <span th:text="${sample.indexType}"></span>
