--- a/src/main/resources/templates/metadataInput/seqType.html
+++ b/src/main/resources/templates/metadataInput/seqType.html
@@ -20,72 +20,55 @@
                 <div class="card">
                     <div class="card-header fs-header" th:text="#{seqType.seqType}"></div>
 
-                    <div xmlns="http://www.w3.org/1999/xhtml">
-                        <div class="card-body" style="text-align: left">
-                            <span th:if="${errorSeqType}" th:text="${errorSeqType}" class="text-danger"></span>
+                    <div class="card-body" style="text-align: left">
+                        <span th:if="${errorSeqType}" th:text="${errorSeqType}" class="text-danger"></span>
 
-                            <form action="/metadata-input/save-seq-type" method="post" id="seqTypeData">
+                        <form action="/metadata-input/save-seq-type" method="post" id="seqTypeData">
 
-                                <div class="form-group">
-                                    <label for="seqTypeName" th:text="#{seqType.name}"></label>
-                                    <input type="text" class="form-control" name="name" id="seqTypeName" required/>
-                                    <input type="text" class="form-control" name="seqTypeId" id="seqTypeId" hidden/>
-                                </div>
+                            <div class="form-group">
+                                <label for="seqTypeName" th:text="#{seqType.name}"></label>
+                                <input type="text" class="form-control" name="name" id="seqTypeName" required/>
+                                <input type="text" class="form-control" name="seqTypeId" id="seqTypeId" hidden/>
+                            </div>
 
-                                <div class="form-group">
-                                    <label for="basicSeqType" th:text="#{seqType.basicSeqType}"></label>
-                                    <select class="custom-select" name="basicSeqType" id="basicSeqType" required>
-                                        <option disabled="disabled" selected="selected" th:text="#{select}"></option>
-                                        <option th:each="basicSeqType : ${basicSeqTypes}"
-                                                th:value="${basicSeqType}"
-                                                th:text="${basicSeqType}">
-                                        </option>
-                                    </select>
-                                </div>
+                            <div class="form-group">
+                                <label for="basicSeqType" th:text="#{seqType.basicSeqType}"></label>
+                                <select class="custom-select" name="basicSeqType" id="basicSeqType" required>
+                                    <option disabled="disabled" selected="selected" th:text="#{select}"></option>
+                                    <option th:each="basicSeqType : ${basicSeqTypes}"
+                                            th:value="${basicSeqType}"
+                                            th:text="${basicSeqType}">
+                                    </option>
+                                </select>
+                            </div>
 
-                                <div class="form-group">
-                                    <label for="ilseNames" th:text="#{seqType.ilseNames}"></label>
-                                    <div class="dynamic-wrap">
-                                        <div class="form-group">
-                                            <div class="entry input-group">
-                                                <input class="form-control ilseNames" id="ilseNames" name="ilseNames" type="text" placeholder="Type something" />
-                                                <span class="input-group-append">
-                                                    <button class="btn btn-success btn-add" type="button" onclick="addImportAliases($(this))">
-                                                        <i class="fas fa-plus"></i>
-                                                    </button>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="form-group">
+                                <label for="ilseNames" th:text="#{seqType.ilseNames}"></label>
+                                <select class="selectize-ilseNames"
+                                        id="ilseNames"
+                                        name="ilseNames"
+                                        th:placeholder="#{typeIn}"
+                                        th:attr="data-items=${seqType?.importAliases ?: 'empty'}"
+                                        multiple>
+                                </select>
+                            </div>
 
-                                <div class="form-group">
-                                    <input type="checkbox" name="singleCell" id="singleCell"/>
-                                    <label for="singleCell" th:text="#{seqType.singleCell}"></label>
-                                </div>
-                                <div class="form-group">
-                                    <input type="checkbox" name="needAntibodyTarget" id="needAntibodyTarget"/>
-                                    <label for="needAntibodyTarget" th:text="#{seqType.needAntibodyTarget}"></label>
-                                </div>
-                                <div class="form-group">
-                                    <input type="checkbox" name="needLibPrepKit" id="needLibPrepKit"/>
-                                    <label for="needLibPrepKit" th:text="#{seqType.needLibPrepKit}"></label>
-                                </div>
-                                <div class="form-group">
-                                    <input type="checkbox" name="tagmentation" id="tagmentation"/>
-                                    <label for="tagmentation" th:text="#{seqType.tagmentation}"></label>
-                                </div>
-                                <div class="form-group">
-                                    <input type="checkbox" name="isDisplayedForUser" id="isDisplayedForUser" checked/>
-                                    <label for="isDisplayedForUser" th:text="#{seqType.isDisplayedForUser}"></label>
-                                </div>
-                                <button type="submit" class="btn btn-primary" th:text="#{submit}" id="submitSeqType"></button>
-                                <a type="button" id="deleteSeqType" class="btn btn-outline-danger" href="#">
-                                    <i class="far fa-trash-can text-danger"></i>
-                                    <span th:text="#{delete}"></span>
-                                </a>
-                            </form>
-                        </div>
+                            <div class="form-group">
+                                <label for="seqTypeOptions" th:text="#{seqType.additionalOptions}"></label>
+                                <select class="selectize-seqTypeOptions"
+                                        id="seqTypeOptions"
+                                        name="seqTypeOptions"
+                                        th:placeholder="#{typeIn}"
+                                        multiple>
+                                    <option th:each="option : ${seqTypeOptions}" th:value="${option}" th:text="${option}"/>
+                                </select>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary" th:text="#{save}" id="submitSeqType"></button>
+                            <a type="button" id="deleteSeqType" class="btn btn-outline-danger" href="#">
+                                <i class="far fa-trash-can"></i> <span th:text="#{delete}"></span>
+                            </a>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -100,9 +83,7 @@
             <tr>
                 <th th:text="#{seqType.name}"></th>
                 <th th:text="#{seqType.basicSeqType}"></th>
-                <th th:text="#{seqType.singleCell}"></th>
-                <th th:text="#{seqType.needAntibodyTarget}"></th>
-                <th th:text="#{seqType.needLibPrepKit}"></th>
+                <th th:text="#{seqType.seqTypeInfos}" class="not-sortable"></th>
                 <th th:text="#{requestedValue.requester}"></th>
                 <th th:text="#{requestedValue.originSubmission}"></th>
                 <th th:text="#{requestedValue.usedInSubmissions}"></th>
@@ -114,54 +95,17 @@
     </div>
 
     <div class="col mb-5 mt-2">
-        <h4 th:text="#{seqType.seqType}"></h4>
-
-        <table class="allSeqTypes-table table table-sm table-striped">
+        <table id="allSeqTypes-table" class="allSeqTypes-table table table-sm table-striped">
             <thead class="thead-blue">
-            <tr style="text-align: center">
-                <th th:text="#{seqType.name}" style="text-align: left"></th>
-                <th th:text="#{seqType.ilseNames}" style="text-align: left"></th>
-                <th th:text="#{seqType.basicSeqType}"></th>
-                <th th:text="#{seqType.singleCell}"></th>
-                <th th:text="#{seqType.needAntibodyTarget}"></th>
-                <th th:text="#{seqType.needLibPrepKit}"></th>
-                <th th:text="#{seqType.tagmentation}"></th>
-                <th th:text="#{seqType.isDisplayedForUser}"></th>
-                <th></th>
-            </tr>
-            </thead>
-
-            <tbody>
-                <tr th:each="sequencingType : ${seqTypes}" style="text-align: center">
-                    <td th:text="${sequencingType.name}" style="text-align: left"></td>
-                    <td style="text-align: left">
-                        <span class="badge badge-dark mr-1" th:each="importAlias : ${sequencingType.importAliases}" th:text="${importAlias}"></span>
-                    </td>
-                    <td th:text="${sequencingType.basicSeqType}"></td>
-                    <td><i class="fas" th:classappend="${sequencingType.singleCell ? 'fa-check text-success' : 'fa-times text-danger'}"></i></td>
-                    <td><i class="fas" th:classappend="${sequencingType.needAntibodyTarget ? 'fa-check text-success' : 'fa-times text-danger'}"></i></td>
-                    <td><i class="fas" th:classappend="${sequencingType.needLibPrepKit ? 'fa-check text-success' : 'fa-times text-danger'}"></i></td>
-                    <td><i class="fas" th:classappend="${sequencingType.tagmentation ? 'fa-check text-success' : 'fa-times text-danger'}"></i></td>
-                    <td><i class="fas" th:classappend="${sequencingType.isDisplayedForUser ? 'fa-check text-success' : 'fa-times text-danger'}"></i></td>
-                    <td>
-                        <i class="far fa-edit cursor-pointer"
-                           th:attr="onclick=|changeSeqTypeData(
-                           '${sequencingType.id}',
-                           '${sequencingType.name}',
-                           '${sequencingType.basicSeqType}',
-                           '${sequencingType.singleCell}',
-                           '${sequencingType.needAntibodyTarget}',
-                           '${sequencingType.needLibPrepKit}',
-                           '${sequencingType.tagmentation}',
-                           '${sequencingType.isDisplayedForUser}',
-                           '${sequencingType.importAliases}')|">
-                        </i>
-                    </td>
+                <tr style="text-align: center">
+                    <th th:text="#{seqType.name}" style="text-align: left"></th>
+                    <th th:text="#{seqType.ilseNames}" style="text-align: left"></th>
+                    <th th:text="#{seqType.basicSeqType}"></th>
+                    <th th:text="#{seqType.seqTypeInfos}" class="not-sortable"></th>
+                    <th class="not-sortable"></th>
                 </tr>
-            </tbody>
-
+            </thead>
         </table>
-
     </div>
 
     <div th:replace="fragments/changeObjectLive :: requestedValuesModal"></div>
