--- a/src/main/resources/templates/fragments/feedback.html
+++ b/src/main/resources/templates/fragments/feedback.html
@@ -16,7 +16,7 @@
 						<div id="feedbackSmileys">
 							<input type="radio" name="smiley" value="sad" class="sad far fa-frown fa-4x" onclick="makeMessageRequiredForCheckedFeedbackSmiley($(this))">
 							<input type="radio" name="smiley" value="neutral" class="neutral far fa-meh fa-4x" onclick="makeMessageRequiredForCheckedFeedbackSmiley($(this))">
-							<input type="radio" name="smiley" value="happy" class="happy far fa-smile fa-4x" onclick="makeMessageRequiredForCheckedFeedbackSmiley($(this))" required>
+							<input type="radio" name="smiley" value="happy" class="happy far fa-smile fa-4x" onclick="makeMessageRequiredForCheckedFeedbackSmiley($(this))">
 						</div>
 						<br>
 						<label for="feedbackFormMessage" class="col-form-label">Message:</label>
